--- a/Chapter 18. Linear Regression.ipynb
+++ b/Chapter 18. Linear Regression.ipynb
@@ -607,9 +607,202 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36629994",
+   "metadata": {},
+   "source": [
+    "### First Stage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "332c06f6",
+   "metadata": {},
+   "source": [
+    "We will estimate the first-stage regression as:\n",
+    "$$𝑎𝑣𝑒𝑥𝑝𝑟_𝑖 = 𝛿_0 + 𝛿_1 𝑙𝑜𝑔𝑒𝑚4_𝑖 + 𝑣_𝑖$$\n",
+    "The data we need to estimate this equation is located in maketable4.dta (only complete data, indicated by baseco = 1, is used for estimation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "485fe793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                 avexpr   R-squared:                       0.270\n",
+      "Model:                            OLS   Adj. R-squared:                  0.258\n",
+      "Method:                 Least Squares   F-statistic:                     22.95\n",
+      "Date:                Sat, 12 Mar 2022   Prob (F-statistic):           1.08e-05\n",
+      "Time:                        19:08:04   Log-Likelihood:                -104.83\n",
+      "No. Observations:                  64   AIC:                             213.7\n",
+      "Df Residuals:                      62   BIC:                             218.0\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          9.3414      0.611     15.296      0.000       8.121      10.562\n",
+      "logem4        -0.6068      0.127     -4.790      0.000      -0.860      -0.354\n",
+      "==============================================================================\n",
+      "Omnibus:                        0.035   Durbin-Watson:                   2.003\n",
+      "Prob(Omnibus):                  0.983   Jarque-Bera (JB):                0.172\n",
+      "Skew:                           0.045   Prob(JB):                        0.918\n",
+      "Kurtosis:                       2.763   Cond. No.                         19.4\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    " # Import and select the data\n",
+    "df4 = pd.read_stata('https://github.com/QuantEcon/QuantEcon.lectures.code/raw/master/ols/maketable4.dta')\n",
+    "df4 = df4[df4['baseco'] == 1]\n",
+    "\n",
+    "# Add a constant variable\n",
+    "df4['const'] = 1\n",
+    "# Fit the first stage regression and print summary\n",
+    "results_fs = sm.OLS(df4['avexpr'],\n",
+    "                 df4[['const', 'logem4']],\n",
+    "                 missing='drop').fit()\n",
+    "print(results_fs.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "017dc65f",
+   "metadata": {},
+   "source": [
+    "### Second Stage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18da33c7",
+   "metadata": {},
+   "source": [
+    "Our second stage regression is thus:\n",
+    "\n",
+    "$$𝑙𝑜𝑔𝑝𝑔𝑝95_𝑖 = 𝛽_0 + 𝛽_1𝑎𝑣̂𝑒𝑥𝑝𝑟𝑖 + 𝑢_𝑖$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "968d9f46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:               logpgp95   R-squared:                       0.477\n",
+      "Model:                            OLS   Adj. R-squared:                  0.469\n",
+      "Method:                 Least Squares   F-statistic:                     56.60\n",
+      "Date:                Sat, 12 Mar 2022   Prob (F-statistic):           2.66e-10\n",
+      "Time:                        19:10:24   Log-Likelihood:                -72.268\n",
+      "No. Observations:                  64   AIC:                             148.5\n",
+      "Df Residuals:                      62   BIC:                             152.9\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "====================================================================================\n",
+      "                       coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------------\n",
+      "const                1.9097      0.823      2.320      0.024       0.264       3.555\n",
+      "predicted_avexpr     0.9443      0.126      7.523      0.000       0.693       1.195\n",
+      "==============================================================================\n",
+      "Omnibus:                       10.547   Durbin-Watson:                   2.137\n",
+      "Prob(Omnibus):                  0.005   Jarque-Bera (JB):               11.010\n",
+      "Skew:                          -0.790   Prob(JB):                      0.00407\n",
+      "Kurtosis:                       4.277   Cond. No.                         58.1\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df4['predicted_avexpr'] = results_fs.predict()\n",
+    "\n",
+    "results_ss = sm.OLS(df4['logpgp95'],\n",
+    "                 df4[['const', 'predicted_avexpr']]).fit()\n",
+    "print(results_ss.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b28f060",
+   "metadata": {},
+   "source": [
+    "Note that while our parameter estimates are correct, our standard errors are not."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c0d59d4",
+   "metadata": {},
+   "source": [
+    "We can correctly estimate a 2SLS regression in one step using the `linearmodels` package, an extension of statsmodels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5b6da356",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          IV-2SLS Estimation Summary                          \n",
+      "==============================================================================\n",
+      "Dep. Variable:               logpgp95   R-squared:                      0.1870\n",
+      "Estimator:                    IV-2SLS   Adj. R-squared:                 0.1739\n",
+      "No. Observations:                  64   F-statistic:                    37.568\n",
+      "Date:                Sat, Mar 12 2022   P-value (F-stat)                0.0000\n",
+      "Time:                        19:13:15   Distribution:                  chi2(1)\n",
+      "Cov. Estimator:            unadjusted                                         \n",
+      "                                                                              \n",
+      "                             Parameter Estimates                              \n",
+      "==============================================================================\n",
+      "            Parameter  Std. Err.     T-stat    P-value    Lower CI    Upper CI\n",
+      "------------------------------------------------------------------------------\n",
+      "const          1.9097     1.0106     1.8897     0.0588     -0.0710      3.8903\n",
+      "avexpr         0.9443     0.1541     6.1293     0.0000      0.6423      1.2462\n",
+      "==============================================================================\n",
+      "\n",
+      "Endogenous: avexpr\n",
+      "Instruments: logem4\n",
+      "Unadjusted Covariance (Homoskedastic)\n",
+      "Debiased: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from linearmodels.iv import IV2SLS\n",
+    "iv = IV2SLS(dependent=df4['logpgp95'],\n",
+    "                     exog=df4['const'],\n",
+    "                     endog=df4['avexpr'],\n",
+    "                     instruments=df4['logem4']).fit(cov_type='unadjusted')\n",
+    "print(iv.summary)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a951eed0",
+   "id": "b9f1a3e4",
    "metadata": {},
    "outputs": [],
    "source": []
